  on the person, not when it tries to use it.
- The day parameter for autoBreakTime is no longer case sensitive.
- Fix a routing problem which causes Kore to walk back and forth.
- Various attackComboSlot bug fixes.
- "You are in Stunned state" message was verbosity 2 instead of 1.
- 'autostorage' command will now work even if storageAuto is set to 0.

New features:
- statsAddAuto will now print a message when it increases a stat.
- Plugins Commands now work (unload, unload all, load, load all).
- More infomation for merchant shop ('al' command).
- Support for private RO server (which has only one real IP).
  To use this feature you must put the line 'private 1' in tables/servers.txt.
- config.txt now supports multi-line comments, like C/C++.
  /* indicates the beginning of a comment, and */ indicates the end.
- AI sequence will now be cleared when switching characters due to
  autoConfChange.
- items_control.txt can now have an 'all' option, just like pickupitems.txt.
  Example:
  # Store everything but nippers; keep nippers in inventory
  nipper 0 0 0
  all 0 1 0
- teleportAuto_[hp|sp|minAggressives] will now print a message when it is
  triggered.
- 'drop' command now works when AI is off, if you are only dropping one item.
- 'aiv' command will now indicate whether or not AI is on.

New config options:
- beepOnPM, beepOnChat if set to 1 will generate a beep when you
  hear a PM/public chat message.
- The attackSkillSlot and attackComboSlot blocks now have an extra option:
  isSelfSkill (flag)
  This specifies whether the combo skill is used on yourself.
- _defendMonsters consition, e.g.:
  partySkill Pneuma {
	  lvl 1
      target_defendMonsters Raydric Archer
  }
  will only cast this skill if a Raydric Archer's last attack hit the person.
- verboseDomains is the opposite of squelchDomains.
- missDamage; any damage you do <= this amount will be counted as a miss.
  (e.g. for monks who have Spirit Spheres)